# l10n-generator

./: .env.example  .eslintcache  .gitignore  .tool-versions  CHANGELOG.md  README.md  cli.js  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  test-sheets.sh  test.config.yaml  test.csv  tsconfig.json  vitest.config.ts
.github/workflows/: elint.yaml  npm-publish.yml  prettier.yml  rust-validation.yaml  unit-test.yaml
coverage/: coverage-final.json  index.html
coverage/src/: index.html  index.ts.html
coverage/src/helpers/: config-loader.ts.html  exporter.ts.html  importer.ts.html  index.html
docs/: CLI-USAGE.md  MIGRATION.md  OAUTH2-QUICKSTART.md  OAUTH2-SETUP.md  QUICKSTART.md  README.md  RUST-MIGRATION.md  TESTING.md
examples/: README.md  csv-both.config.yaml  csv-dart.config.yaml  csv-typescript.config.yaml  sample-data.csv  sheet-apikey.config.yaml  sheet-jwt.config.yaml
rust/l10n-rust/: Cargo.toml
rust/l10n-rust/src/: app.rs  cli.rs  config.rs  export.rs  google.rs  main.rs  model.rs  oauth2_helper.rs  path_utils.rs
scripts/: rust-diagnose.sh  rust-parity.sh
src/: cli.ts  index.test.ts  index.ts
src/helpers/: config-loader.test.ts  config-loader.ts  diagnose.ts  exporter.test.ts  exporter.ts  importer.test.ts  importer.ts  localization.ts  oauth2-helper.ts  type.ts
src/helpers/exporters/: dart.ts  typescript.ts
src/helpers/importers/: csv.ts  googleSheetsApiKey.ts  googleSheetsJwt.ts  (+2 more)
src/test-helpers/: test-utils.ts
test-output/: app_en.arb  app_ja.arb  en.ts  ja.ts  translateFunction.ts  translation.ts
